Improve error handling

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,13 +5,14 @@
 <head>
   <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}">
   <meta charset="UTF-8">
-  <title>Weightlifting Log Error Panel</title>
+  <title>Weightlifting Log access denied page</title>
 </head>
 <body>
 <div id="error-container">
   <div class="centered">
     <h2>Error!</h2>
     <p>You don't have the credentials to use this feature!</p>
+    <br>
     <a class="my-btn" th:href="@{/login}" type="button">Take me back</a>
   </div>
 </div>
