--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,9 +9,10 @@
 <body>
 <!--Show message -->
 <div th:fragment="show-message">
-  <h2 th:utext="${header}">Error!</h2><br>
-  <h5 th:utext="${message}"></h5>
-  <a class="my-btn" th:href="${address}" onclick="storeLogoState();" type="button">OK</a>
+  <h2 th:utext="${header}"></h2><br>
+  <h5 th:utext="${text}"></h5>
+  <br>
+  <a class="my-btn" th:href="${address}" onclick="storeLogoState();" type="button" th:utext="${button}"></a>
 </div>
 
 <!--Login-->
