Refactor prepMessage() and it's usages

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,7 +13,7 @@
   <h2 th:utext="${header}"></h2><br>
   <h5 th:utext="${text}"></h5>
   <br>
-  <a class="my-btn" th:href="${address}" onclick="storeLogoState();" type="button" th:utext="${button}"></a>
+  <a class="my-btn" th:href="${address}" onclick="storeLogoState();" type="button" th:utext="OK"></a>
 </div>
 
 <!--Login-->
