--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -95,6 +95,7 @@
 
 <!--Change user's password form-->
 <div th:fragment="change-password">
+  <h2>Please enter and confirm both old and new passwords...</h2><br>
   <form th:action="@{/user/changepassword}" th:object="${changePassword}" method="post">
     <p th:if="${#fields.hasErrors('oldPassword')}" class="alert" th:errors="*{oldPassword}"></p>
     <p th:if="${#fields.hasErrors('confirmOldPassword')}" class="alert"
@@ -102,6 +103,7 @@
     <p th:if="${#fields.hasErrors('newPassword')}" class="alert" th:errors="*{newPassword}"></p>
     <p th:if="${#fields.hasErrors('confirmNewPassword')}" class="alert"
        th:errors="*{confirmNewPassword}"></p>
+    <br>
     <p>
       <label>Current password:
         <input type="password" th:field="*{oldPassword}" autofocus="autofocus"/>
